--- a/src/main/resources/templates/Usuario/usuario.html
+++ b/src/main/resources/templates/Usuario/usuario.html
@@ -10,6 +10,13 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous">
 
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
     <!-- Estilos personalizados -->
     <style>
     body {
@@ -66,51 +73,111 @@
       background-color: #e9ecef;
     }
 
+<!--   .custom-checkbox:checked + .form-check-label::before {-->
+<!--    background-color: red;-->
+<!--    }-->
 
+<!--    .inativo {-->
+<!--    color: red !important;-->
+
+<!--    }-->
 
 
     </style>
+    <script>
+    function inativarUsuario(userId) {
+    $.ajax({
+        type: "GET",
+        url: "/inativarUsuario/" + userId,
+        success: function (data) {
+
+            $("#usuario" + userId).remove();
+        },
+        error: function (error) {
+            console.log("Erro ao inativar o usuário: " + error);
+        }
+    });
+}
+</script>
 </head>
 <body>
 
 <div class="container mt-4">
-    <h1 class="text-center">Lista de Usuarios</h1>
+    <h1 class="text-center">Lista de Usuários</h1>
     <div class="d-flex justify-content-between mb-4">
         <a th:href="@{/showNewUsuarioForm}" class="btn btn-primary">Adicionar Usuário</a>
         <a th:href="@{/home}" class="btn btn-info">Menu</a>
     </div>
+    <div class="form-check form-switch form-check-reverse">
+        <input class="form-check-input" type="checkbox" id="botaoMostrarInativos" checked>
+        <label class="form-check-label" for="botaoMostrarInativos">Mostrar Inativos</label>
+    </div>
+    <a th:href="@{/mostrarInativos}" class="btn btn-primary">Mostrar Inativos</a>
+    <a th:href="@{/esconderInativos}" class="btn btn-primary">Esconder Inativos</a>
+
+
+
+
 
     <table class="table table-striped">
         <thead>
         <tr>
+<!--            <th>-->
+<!--                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=nome&sortDir=' +-->
+<!--                ${reverseSortDir}}">-->
+<!--                    Nome do Usuário</a>-->
+<!--            </th>-->
+<!--            <th>-->
+<!--                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=matricula&sortDir=' +-->
+<!--                ${reverseSortDir}}">-->
+<!--                    Matricula</a>-->
+<!--            </th>-->
+<!--            <th>-->
+<!--                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=cargo&sortDir=' +-->
+<!--                ${reverseSortDir}}">-->
+<!--                    Cargo</a>-->
+<!--            </th>-->
             <th>
-                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=nome&sortDir=' +
-                ${reverseSortDir}}">
-                    Nome do Usuário</a>
+                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=nome&sortDir=' + ${reverseSortDir}}">
+                    Nome do Usuário
+                </a>
             </th>
             <th>
-                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=matricula&sortDir=' +
-                ${reverseSortDir}}">
-                    Matricula</a>
+                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=matricula&sortDir=' + ${reverseSortDir}}">
+                    Matricula
+                </a>
             </th>
             <th>
-                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=cargo&sortDir=' +
-                ${reverseSortDir}}">
-                    Cargo</a>
+                <a th:href="@{'/pageUsuario/' + ${currentPage} + '?sortField=cargo&sortDir=' + ${reverseSortDir}}">
+                    Cargo
+                </a>
             </th>
+
             <th>Ações</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="usuario : ${listUsuario}">
-            <td th:text="${usuario.nome}"></td>
-            <td th:text="${usuario.matricula}"></td>
-            <td th:text="${usuario.cargo}"></td>
-            <td>
+        <tr th:id="${'usuario' + usuario.id}" th:each="usuario : ${listUsuario}">
+            <td th:text="${usuario.nome}" th:style="${usuario.ativo == false} ? 'color: red' : ''"></td>
+            <td th:text="${usuario.matricula}" th:style="${usuario.ativo == false} ? 'color: red' : ''"></td>
+            <td th:text="${usuario.cargo == 1 ? 'Gestor' : usuario.cargo == 2 ? 'Médico' : usuario.cargo == 3 ? 'Residente' : usuario.cargo == 4 ? 'Enfermeiro(a)-Chefe' : usuario.cargo == 5 ? 'Enfermeiro(a)' : 'Desconhecido'}" th:style="${usuario.ativo == false} ? 'color: red' : ''"></td>
+
+            <td class="d-flex align-items-center justify-content-center">
                 <a th:href="@{/showFormForUpdateUsuario/{id}(id=${usuario.id})}"
-                   class="btn btn-primary btn-sm">Editar</a>
-                <a th:href="@{/deleteUsuario/{id}(id=${usuario.id})}" class="btn btn-danger btn-sm">Excluir</a>
+                   class="btn btn-primary btn-sm mx-2">Editar</a>
+<!--                <a th:href="@{/deleteUsuario/{id}(id=${usuario.id})}" class="btn btn-danger btn-sm mx-2 ">Excluir</a>-->
+
+<!--                <a th:href="@{'/inativarUsuario/' + ${usuario.id}}" class="btn btn-warning btn-sm mx-2">Inativar</a>-->
+                <a th:onclick="'inativarUsuario('+${usuario.id}+')'" class="btn btn-warning btn-sm mx-2">Inativar</a>
+                <a th:href="@{'/ativarUsuario/' + ${usuario.id}}" class="btn btn-success btn-sm mx-2">Ativar</a>
+
+
+<!--                <div class="form-check form-switch form-check-reverse">-->
+<!--                    <input class="form-check-input" type="checkbox" id="ativo" checked style="background-color: #DC143C;">-->
+<!--                    <label class="form-check-label" for="ativo">Ativo</label>-->
+<!--                </div>-->
             </td>
+
         </tr>
         </tbody>
     </table>
@@ -144,5 +211,9 @@
         </div>
     </div>
 </div>
+
+
+
+
 </body>
 </html>
