--- a/src/main/resources/templates/Usuario/usuario.html
+++ b/src/main/resources/templates/Usuario/usuario.html
@@ -17,6 +17,13 @@
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" href="/DataTables/datatables.css" />
+    <script src="/DataTables/datatables.js"></script>
+
+
     <!-- Estilos personalizados -->
     <style>
     body {
@@ -98,6 +105,24 @@
         }
     });
 }
+
+document.addEventListener("DOMContentLoaded", function () {
+const checkbox = document.getElementById("botaoMostrarInativos");
+
+    checkbox.addEventListener("change", function () {
+        if (checkbox.checked === false) {
+            // Se o checkbox está marcado, redirecione para a rota /mostrarInativos
+            window.location.href = "/mostrarAtivos";
+        } else {
+            // Se o checkbox não está marcado, redirecione para a rota /mostrarAtivos
+            window.location.href = "/mostrarInativos";
+        }
+    });
+});
+
+$(document).ready( function () {
+    $('#myTable').DataTable();
+} );
 </script>
 </head>
 <body>
@@ -112,14 +137,14 @@
         <input class="form-check-input" type="checkbox" id="botaoMostrarInativos" checked>
         <label class="form-check-label" for="botaoMostrarInativos">Mostrar Inativos</label>
     </div>
-    <a th:href="@{/mostrarInativos}" class="btn btn-primary">Mostrar Inativos</a>
-    <a th:href="@{/esconderInativos}" class="btn btn-primary">Esconder Inativos</a>
+<!--    <a th:href="@{/mostrarInativos}" class="btn btn-primary">Mostrar Inativos</a>-->
+<!--    <a th:href="@{/esconderInativos}" class="btn btn-primary">Esconder Inativos</a>-->
 
 
 
 
 
-    <table class="table table-striped">
+    <table id="" class="table table-striped">
         <thead>
         <tr>
 <!--            <th>-->
@@ -182,38 +207,40 @@
         </tbody>
     </table>
 
-    <div th:if="${totalPages > 1}">
-        <div class="row col-sm-10">
-            <div class="col-sm-2">
-                Total Itens: [[${totalItems}]]
-            </div>
+    <nav aria-label="..." th:if="${totalPages > 1}">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link">Total Itens: [[${totalItems}]]</a>
+            </li>
 
-            <div class="col-sm-1">
-          <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-            <a th:if="${currentPage != i}"
-               th:href="@{'/pageUsuario/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"> [[${i}]]</a>
-            <span th:unless="${currentPage != i}">[[${i}]]</span> <!--&nbsp;-->
-          </span>
-            </div>
+            <th:block th:each="i: ${#numbers.sequence(1, totalPages)}">
+                <li class="page-item active" th:if="${i == currentPage}">
+                    <a th:href="@{'/pageUsuario/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
+                       class="page-link">[[${i}]]</a>
+                </li>
+                <li class="page-item" th:unless="${i == currentPage}">
+                    <a th:href="@{'/pageUsuario/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}"
+                       class="page-link">[[${i}]]</a>
+                </li>
+            </th:block>
 
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{'/pageUsuario/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
-                <span th:unless="${currentPage < totalPages}">Next</span>
-            </div>
+            <li class="page-item">
+                <a class="page-link" th:if="${currentPage < totalPages}"
+                   th:href="@{'/pageUsuario/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+                <a class="page-link" th:unless="${currentPage < totalPages}">Next</a>
+            </li>
 
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{'/pageUsuario/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
-                <span th:unless="${currentPage < totalPages}">Last</span>
-            </div>
+            <li class="page-item">
+                <a class="page-link" th:if="${currentPage < totalPages}"
+                   th:href="@{'/pageUsuario/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                <a class="page-link" th:unless="${currentPage < totalPages}">Last</a>
+            </li>
+        </ul>
+    </nav>
 
-        </div>
-    </div>
+
+
+
 </div>
-
-
-
-
 </body>
 </html>
